--- a/quanminfeijidazhan/HTML5全民飞机大战游戏代码/index.html
+++ b/quanminfeijidazhan/HTML5全民飞机大战游戏代码/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>全民飞机大战</title>
+    <title>全民飞机大战-ceshi</title>
     <meta name="viewport"
           content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no,target-densitydpi=device-dpi"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
