--- a/1/wechat/index.html
+++ b/1/wechat/index.html
@@ -4,7 +4,7 @@
   
   <title>微信JS-SDK Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-  <link rel="stylesheet" href="./微信JS-SDK Demo_files/style.css">
+  <link rel="stylesheet" href="./JSSDKDemo/style.css">
 </head>
 <body ontouchstart="">
 <div class="wxapi_container">
@@ -120,7 +120,7 @@
     </div>
   </div>
 
-<script src="./微信JS-SDK Demo_files/jweixin-1.0.0.js"></script>
+<script src="./JSSDKDemo/jweixin-1.0.0.js"></script>
 <script>
   /*
    * 注意：
@@ -179,7 +179,7 @@
       ]
   });
 </script>
-<script src="./微信JS-SDK Demo_files/zepto.min.js"></script>
-<script src="./微信JS-SDK Demo_files/demo.js"> </script>
+<script src="./JSSDKDemo/zepto.min.js"></script>
+<script src="./JSSDKDemo/demo.js"> </script>
 
 </body></html>
