--- a/1/tower_game-master/index.html
+++ b/1/tower_game-master/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no,minimal-ui">
-    <title>Tower</title>
+    <title>huangjz为 xujj 女士 努力搭建的高楼</title>
     <style>
         * {
             margin: 0;
@@ -486,7 +486,7 @@
     },
     setGameFailed: function (f) {
       $('#score').text(score)
-      if (f >= 3) overShowOver()
+      if (f >= 9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999) overShowOver()
     }
   }
 
