--- a/1/fishjoy/index.html
+++ b/1/fishjoy/index.html
@@ -21,7 +21,7 @@ body, html{height: 100%;}
 #middle[id]{display:table-cell; vertical-align:middle; position:static;}
 </style>
 
-<title>Fish Joy in HTML5</title>
+<title>许金娇html5代码学习的例子：捕鱼达人</title>
 
 <script type="text/javascript" src="js/quark.base-1.0.0.alpha.min.js"></script>
 <!--<script type="text/javascript" src="fishjoy.game.js"></script>-->
